# Clasificaci-n-de-tapones-plasticos-REC-

./: .gitignore  Entrega2.docx  README.md
LRA_ws/: .claudeignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  test.py  test_aruco.sh
LRA_ws/calibration_data/: camera_info.yaml
LRA_ws/install/: local_setup.sh  setup.sh
LRA_ws/install/lra_vision/include/lra_vision/lra_vision/msg/: calibration_status.h  calibration_status.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
LRA_ws/install/lra_vision/include/lra_vision/lra_vision/msg/detail/: calibration_status__functions.c  calibration_status__rosidl_typesupport_fastrtps_c.h  calibration_status__rosidl_typesupport_fastrtps_cpp.hpp  calibration_status__rosidl_typesupport_introspection_cpp.hpp  calibration_status__struct.h  calibration_status__type_support.cpp  calibration_status__type_support.h  calibration_status__type_support.hpp
LRA_ws/install/lra_vision/include/lra_vision/lra_vision/srv/: calibrate_camera.h  calibrate_camera.hpp
LRA_ws/install/lra_vision/include/lra_vision/lra_vision/srv/detail/: calibrate_camera__builder.hpp  calibrate_camera__rosidl_typesupport_fastrtps_c.h  calibrate_camera__rosidl_typesupport_fastrtps_cpp.hpp  calibrate_camera__rosidl_typesupport_introspection_cpp.hpp  calibrate_camera__struct.h  calibrate_camera__struct.hpp  calibrate_camera__traits.hpp  calibrate_camera__type_support.cpp
LRA_ws/install/lra_vision/lib/lra_vision/: aruco_detector_node  camera_calibrator_node
LRA_ws/install/lra_vision/local/lib/python3.10/dist-packages/lra_vision/: _lra_vision_s.ep.rosidl_typesupport_fastrtps_c.c
LRA_ws/install/lra_vision/local/lib/python3.10/dist-packages/lra_vision-1.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
LRA_ws/install/lra_vision/local/lib/python3.10/dist-packages/lra_vision/srv/: _calibrate_camera.py  _calibrate_camera_s.c
LRA_ws/install/lra_vision/share/ament_index/resource_index/package_run_dependencies/: lra_vision
LRA_ws/install/lra_vision/share/lra_vision/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
LRA_ws/install/lra_vision/share/lra_vision/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_lra_vision__rosidl_generator_cppExport.cmake  export_lra_vision__rosidl_generator_pyExport-noconfig.cmake  export_lra_vision__rosidl_generator_pyExport.cmake  export_lra_vision__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_lra_vision__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_lra_vision__rosidl_typesupport_fastrtps_cppExport.cmake  lra_vision__rosidl_typesupport_cppExport-noconfig.cmake  lra_vision__rosidl_typesupport_cppExport.cmake  lra_vision__rosidl_typesupport_introspection_cppExport-noconfig.cmake  lra_vision__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
LRA_ws/install/lra_vision/share/lra_vision/config/: aruco_params.yaml
LRA_ws/install/lra_vision/share/lra_vision/launch/: camera_calibration.launch.py  camera_manager.launch.py
LRA_ws/install/lra_vision/share/lra_vision/rust/src/: msg.rs  srv.rs
LRA_ws/install/lra_vision/share/lra_vision/rust/src/msg/: rmw.rs
LRA_ws/log/: latest_build
LRA_ws/src/lra_vision/: CMakeLists.txt  GEMINI.md  package.xml  readme.md
LRA_ws/src/lra_vision/config/: calibration.yaml  camera_mount.yaml  camera_params.yaml  image_processing.yaml
LRA_ws/src/lra_vision/include/lra_vision/: aruco_detector.hpp  camera_calibration.hpp  camera_detector.hpp  camera_tf_broadcaster.hpp  image_processor.hpp  ur3_camera_transform.hpp
LRA_ws/src/lra_vision/launch/: aruco_detector.launch.py  camera_calibration.launch.py  camera_manager.launch.py  camera_publisher.launch.py  camera_tf_broadcaster.launch.py  lra_vision.launch.py  upload_urdf.launch.py
LRA_ws/src/lra_vision/msg/: CalibrationStatus.msg  CameraInfo.msg
LRA_ws/src/lra_vision/rviz/: camera_view.rviz  detection_view.rviz
LRA_ws/src/lra_vision/scripts/: aruco_test_publisher.py  camera_info_publisher.py  launch_vision_system.sh
LRA_ws/src/lra_vision/src/nodes/: aruco_detector_node.cpp  camera_calibrator_node.cpp  camera_manager_node.cpp  camera_publisher_node.cpp  camera_tf_broadcaster_node.cpp  detector_tapones.py
LRA_ws/src/lra_vision/src/tf/: camera_tf_broadcaster.cpp  ur3_camera_transform.cpp
LRA_ws/src/lra_vision/src/utils/: aruco_detector.cpp  camera_calibration.cpp  camera_detector.cpp  image_processor.cpp
LRA_ws/src/lra_vision/srv/: CalibrateCamera.srv  GetCameraDevice.srv
LRA_ws/src/lra_vision/test/: test_aruco_detector.cpp  test_camera_calibration.cpp  test_camera_detector.cpp  test_image_processor.cpp  test_tf_broadcaster.cpp
LRA_ws/src/lra_vision/urdf/: camera.urdf  camera.xacro  upload_urdf.launch
LRA_ws/src/rec_vision/: README.md  package.xml  setup.cfg  setup.py
LRA_ws/src/rec_vision/launch/: color_calibrator.launch.py  detector_tapones.launch.py
LRA_ws/src/rec_vision/rec_vision/: color_calibrator_node.py  detector_tapones.py  gui_control_node.py  mcap_publisher.py
ur3_vision_control/: package.xml  setup.cfg  setup.py
ur3_vision_control/ur3_vision_control/: ur3_controller.py  ur3_moveit_test.py  ur3_pick_sort.py  ur3_with_gripper.xacro  vision_fake.py  vision_fake_sort.py
