<?xml version="1.0"?>
<package format="3">
  <name>rec_vision</name>
  <version>1.0.0</version>
  <description>
    Vision package - REC Project.
    Clasificacion de tapones plasticos por color con K-Means.
    Nodo calibrador de color + nodo detector de tapones.
    Universidad Politecnica de Madrid - MUAR 2025-2026
  </description>

  <maintainer email="delia@alumnos.upm.es">Delia</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
